trunk/Archive2/7a/4c4dd20eb77e91/output
main.cpp: In function 'std::ostream& operator<<(std::ostream&, const std::vector<T>&)':
main.cpp:8:16: error: ISO C++ forbids declaration of 'el' with no type [-fpermissive]
     for (auto& el : vec)
                ^
main.cpp:8:21: error: range-based 'for' loops are not allowed in C++98 mode
     for (auto& el : vec)
                     ^
main.cpp: In function 'int main()':
main.cpp:19:5: error: in C++98 'words' must be initialized by constructor, not by '{...}'
     };
     ^
main.cpp:19:5: error: could not convert '{"Hello", "from", "GCC", "4.9.2", "!"}' from '<brace-enclosed initializer list>' to 'std::vector<std::basic_string<char> >'
